--- a/neo/templates/path.html
+++ b/neo/templates/path.html
@@ -14,29 +14,39 @@
     }
   </style>
 
-  {% load staticfiles %}
-  <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'dist/vis.js' %}"></script>
-  <link href="{% static 'dist/vis-network.min.css' %}" rel="stylesheet" type="text/css" />
+    {% load staticfiles %}
+    <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'dist/vis.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bootstrap-3.3.7-dist/js/bootstrap.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap-slider.js' %}"></script>
+    <link href="{% static 'dist/vis-network.min.css' %}" rel="stylesheet" type="text/css" />
+    <link  href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.css' %}" rel="stylesheet">
+    <link  href="{% static 'bootstrap-3.3.7-dist/css/bootstrap-theme.css' %}" rel="stylesheet">
+    <link  href="{% static 'css/slider.css' %}" rel="stylesheet">
 
 </head>
 
 
 
 <body onload="draw()">
-
-    <p>请输入两个人名</p>
-    <form action="/find_path" method="get"><br>姓名：
-        <input type="text" id="fname" name="p"> <br>姓名：
-        <input type="text" id="tname" name="p"> <br>
-
-        <button type="button" id='btn-commit'>提交</button>
+    <form action="/find_path" method="get"><br>
+        <label for="fname" style="margin-left:1%;">最短路径查询：</label>
+        <div class="form-group" style="width:20%;margin-left:1%;">
+            <label for="fname">姓名：</label>
+            <input type="text" class="form-control" name="htitle" id="fname" name="p">
+            <div class="errormessage"></div>
+        </div>
+        <div class="form-group" style="width:20%;margin-left:1%;">
+            <label for="tname">姓名：</label>
+            <input type="text" class="form-control" name="htitle" id="tname" name="p">
+            <div class="errormessage"></div>
+        </div>
+        <div class="form-group" style="width:20%;margin-left:1%;">
+            <input type="button" class="btn btn-default" style="margin-left:5px" name="Submit" value="提交" id='btn-commit' />
+        </div>
     </form>
 
-    <p>
-        Scale nodes and edges depending on their value. Hover over edges to get a popup with more information.
-    </p>
-    <div id="mynetwork" style="float:left"></div>
+    <div id="mynetwork" style="float:left;margin-left:1%;"></div>
     <div style="float:left;margin-left:200px;">
         <p>result: <span id='result'></span></p>
     </div>
@@ -50,10 +60,28 @@
 
 
 <script type="text/javascript">
+      // Instantiate a slider
+var mySlider = $("input.slider").slider();
+
+// Call a method on the slider
+var value = mySlider.slider('getValue');
+
+// For non-getter methods, you can chain together commands
+    mySlider
+        .slider('setValue', 5)
+        .slider('setValue', 7);
+
+    // With JQuery
+$('#ex1').slider({
+	formatter: function(value) {
+		return 'Current value: ' + value;
+	}
+});
 
     var nodes = [];
     var edges = [];
     var network = null;
+    // Horizontal slider
     $(document).ready(function(){
         $("#btn-commit").click(function(){
             nodes = [];
