--- a/neo/templates/path.html
+++ b/neo/templates/path.html
@@ -37,7 +37,8 @@
 			</ul>
 		</div>
 	</div>
-    <div id="main-container" class="container" style="margin-left: 0;margin-top:0;">
+    <hr>
+    <div id="main-container" class="container" style="margin-left: 0;margin-top:0;padding-left:0">
         <div class="col-md-8 col-sm-12 col-xs-12">
             <div class="panel panel-default">
                     <div class="panel-heading">
